--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -4,24 +4,21 @@
   border-collapse: collapse;
   white-space: normal;
 }
-.sd-table tr:not(:last-child) {
-  padding-bottom: calcSize(2);
-}
 .sd-table__cell {
   font-weight: normal;
   font-size: calcSize(2);
   line-height: calcSize(3);
-  padding-top: calcSize(2);
   padding-bottom: calcSize(2);
   color: $foreground;
   text-align: center;
+  padding-right: calcSize(1);
+  padding-left: calcSize(1);
 }
 .sd-table__cell--header {
   font-weight: 600;
   vertical-align: top;
-}
-.sd-table__cell:not(:last-child) {
-  padding-right: calcSize(2);
+  padding-top: 12px;
+  padding-bottom: 28px;
 }
 .sd-table__cell--actions,
 .sd-matrixdynamic__add-btn {
@@ -72,33 +69,79 @@
   font-weight: 600;
   text-align: left;
 }
-.sd-table__cell:hover:not(:focus-within):not(.sd-table__cell--row-text):not(.sd-table__cell--actions) {
+.sd-table__cell:hover:not(:focus-within):not(.sd-table__cell--row-text):not(.sd-table__cell--actions):not(.sd-matrix__cell:first-child) {
   position: relative;
   .sd-question__erbox--tooltip {
     display: inline-block;
   }
 }
 .sd-table__cell--actions,
-.sd-table__cell--row-text:first-child {
+.sd-table__cell--empty,
+.sd-table__cell--row-text,
+.sd-matrix__cell:first-child,
+.sd-matrix tr > td:first-child
+{
   position: sticky;
   background: $background;
-  z-index: 2;
+  z-index: 12;
+  &:first-child {
+    left: -8px;
+  }
+  &:last-child {
+    right: -8px;
+  }
 }
-.sd-table__cell--row-text:first-child {
-  left: 0;
-}
-.sd-table__cell--actions:first-child {
-  left: 0;
-}
-
 .sd-table__cell--actions:last-child {
-  right: 0;
-  z-index: 3;
-}
-.sd-question--table.sd-element--with-frame#3814 .sd-table__cell--actions:last-child {
   .sv-action-bar {
     margin-right: -24px;
     justify-content: end;
     background: $background;
+  }
+}
+.sd-question.sd-question--table {
+  position: relative;
+  overflow-x: auto;
+}
+.sd-question--table {
+  & > .sd-question__content {
+    display: flex;
+    margin: 0 -40px;
+    padding-top: 20px;
+    width: fit-content;
+    min-width: calc(100% + 80px);
+    &:before,
+    &:after {
+      content: "";
+      display: block;
+      position: sticky;
+      min-height: 100%;
+      width: 32px;
+      flex-shrink: 0;
+      background: $background;
+      z-index: 11;
+    }
+    &::before {
+      left: -40px;
+    }
+    &:after {
+      right: -40px;
+    }
+    > div {
+      flex-basis: 100%;
+    }
+  }
+}
+.sd-question--table:not(.sd-question--table.sd-element--with-frame) {
+  padding-right: 40px;
+  margin-right: -40px;
+  padding-left: 40px;
+  margin-left: -40px;
+  box-sizing: content-box;
+}
+
+.sd-question--table {
+  & > .sd-question__header {
+    position: sticky;
+    left: 0;
   }
 }
